# CodeBROs---CSCE1102-Lab-Project

./: CMakeLists.txt
client/: CMakeLists.txt  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
server/: CMakeLists.txt  client_test.cpp  server.cpp
shared/: CMakeLists.txt
shared/src/: trial.cpp
tests/: CMakeLists.txt  dummy_test.cpp
